Fix long item overflow

--- a/src/less/komponentit/komponentit.less
+++ b/src/less/komponentit/komponentit.less
@@ -55,7 +55,7 @@
   position: absolute;
   z-index: 1000;
   // top: 0;
-  min-width: 100%;
+  width: 100%;
   background: @autocomplete-dropdown-background;
   border: 1px solid @autocomplete-dropdown-border-color;
   border-top: none;
